# pz_challenge

./: .gitignore  .gitmodules  .readthedocs.yaml  AION_SUBMISSION.md  PROJECT_OVERVIEW.md  README.md  aion_pz.py  pyproject.toml  rail_aion_pz.py  requirements_aion.txt  requirements_rail_aion.txt
accepted/: requirements_bpz_136temps_4tasks.txt  requirements_bpz_31temps.txt  requirements_conclave.txt  requirements_dnf_roman_fallback.txt  requirements_easy_forest.txt  requirements_lephare.txt  requirements_lsst_v3.txt  requirements_lsst_v5.txt  requirements_pz_resnet_flow.txt  requirements_rail_bpz_test.txt  requirements_rail_knn_4tasks.txt  submit_bpz_136temps_4tasks.yaml  submit_bpz_31temps.yaml  submit_bpz_31temps_4tasks.yaml  submit_conclave.yaml  submit_dnf_lsst_fallback.yaml  submit_dnf_roman_fallback.yaml  submit_easy_forest.yaml  submit_lephare.yaml  submit_lsst_v3.yaml  submit_lsst_v5.yaml  submit_owenqueen.yaml  submit_pz_resnet_flow.yaml  submit_rail_bpz_test.yaml  submit_rail_knn_4tasks.yaml  submit_rail_knn_test.yaml  test_bpz_136temps_4tasks.py  test_bpz_31temps.py  test_bpz_31temps_4tasks.py  test_conclave.py  test_dnf_lsst_fallback.py  test_dnf_roman_fallback.py  test_easy_forest.py  test_lephare.py  test_lsst_v3.py  test_lsst_v5.py  test_owenqueen.py  test_pz_resnet_flow.py  test_rail_aion.py  test_rail_bpz_test.py  (+2 more)
admin/: Eval_PIT.ipynb  Eval_PIT_Metrics.ipynb  Eval_Point.ipynb  Eval_Summary_Tables.ipynb  Eval_Timing.ipynb  Eval_point_v_mag.ipynb  Eval_point_v_redshift.ipynb  do_results  evaluate.py
docs/: .gitignore  README.md  conf.py  doit  index.rst  my_style.tex  pz_challenge.bib  pz_challenge.tex  validation.rst  validation_taskset_1.rst  validation_taskset_2.rst  validation_taskset_3.rst  validation_taskset_4.rst
docs_results/: Makefile  conf.py  high_level_summary.rst  index.rst
examples/: do_example.py  requirements_example.txt  test_example.py
nb/: Blending.ipynb  CWWSB_LSST_Roman_colors_YJH.hdf5  Metrics.ipynb  Score.ipynb  (+3 more)
scripts/: submit.py  (+14 more)
(+26 files in other folders)
